--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: light-autom8-vector-store
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
     envVars:
       - key: OPENAI_API_KEY
         sync: false
@@ -11,3 +11,5 @@ services:
         sync: false
       - key: FLASK_ENV
         value: production
+      - key: PYTHON_VERSION
+        value: 3.11.0
